apps/mediastack/templates/botdarr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mediastack-botdarr
  labels:
    app: botdarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: botdarr
  template:
    metadata:
      labels:
        app: botdarr
    spec:
      containers:
      - name: botdarr
        image: shayaantx/botdarr:latest
        ports:
        - containerPort: 80
