apps/mediastack/templates/plex-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mediastack-kube-plex
  namespace: mediastack
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    external-dns.alpha.kubernetes.io/target: "homelab-tunnel.tribz.cloud"
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    hajimari.io/appName: Plex
    hajimari.io/icon: multimedia
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - plex.tribz.cloud
      secretName: plex-tls-certificate
  rules:
    - host: plex.tribz.cloud
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: mediastack-kube-plex
                port:
                  name: pms
